# annotate_bam_statistics_sc

./: CMakeLists.txt  README.md  algorithm.cpp  algorithm.h  alphabet.h  annovar_file.cpp  annovar_file.h  bam_file.cpp  bam_file.h  barcodes_file.cpp  barcodes_file.h  fasta_file.cpp  fasta_file.h  main.cpp
